# gossip

./: .gitignore  CMakeLists.txt  conanfile.txt
CMake/: conan.cmake
dev/: format.sh
include/api/rest/: ApiServer.hpp
include/request/: SimpleHttpRequest.hpp
include/swim/: GossipFailureDetector.hpp  SwimClient.hpp  SwimCommon.hpp  SwimServer.hpp
include/utils/: utils.hpp
proto/: swim.proto
src/api/rest/: ApiServer.cpp
src/examples/: gossip_example.cpp  server_demo.cpp
src/swim/: GossipFailureDetector.cpp  SwimClient.cpp  SwimServer.cpp
src/utils/: utils.cpp
tests/: CMakeLists.txt  all_tests.cpp  test_gossip.cpp  test_integration.cpp  test_swim_server.cpp  tests.h
